'代码生成'修改为mp的调用方式